--- a/RIval/RIval.csproj
+++ b/RIval/RIval.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{CF787192-5871-4FDD-A93A-3A481FA51C63}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>RIval</RootNamespace>
-    <AssemblyName>BFACore</AssemblyName>
+    <AssemblyName>Ignite</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
