--- a/RIval/RIval.csproj
+++ b/RIval/RIval.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Core\Components\FileSystem\FileMgr.cs" />
     <Compile Include="Core\Components\FileSystem\Types\FileObj.cs" />
     <Compile Include="Core\Components\FileSystem\Types\FileObjectsCollection.cs" />
+    <Compile Include="Core\Components\Update\Types\UpdateAnnotation.cs" />
     <Compile Include="Core\Components\Update\UpdateApiHandler.cs" />
     <Compile Include="Core\Components\Update\UpdateFacade.cs" />
     <Compile Include="Core\Components\Update\UpdateParser.cs" />
