--- a/RIval/RIval.csproj
+++ b/RIval/RIval.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Core\Components\Auth\AuthFacade.cs" />
     <Compile Include="Core\Components\Auth\RegisterFacade.cs" />
     <Compile Include="Core\Components\Auth\Types\AuthResult.cs" />
+    <Compile Include="Core\Components\FileSystem\FileCrashBuilder.cs" />
     <Compile Include="Core\Components\FileSystem\FileMgr.cs" />
     <Compile Include="Core\Components\FileSystem\Types\FileObj.cs" />
     <Compile Include="Core\Components\FileSystem\Types\FileObjectsCollection.cs" />
@@ -94,6 +95,8 @@
     <Compile Include="Core\Components\Update\UpdateApiHandler.cs" />
     <Compile Include="Core\Components\Update\UpdateFacade.cs" />
     <Compile Include="Core\Components\Update\UpdateParser.cs" />
+    <Compile Include="Core\Extensions\ByteArrayEx.cs" />
+    <Compile Include="Core\Extensions\StringEx.cs" />
     <Compile Include="WaitWindow.xaml.cs">
       <DependentUpon>WaitWindow.xaml</DependentUpon>
     </Compile>
