--- a/RIval/RIval.csproj
+++ b/RIval/RIval.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{CF787192-5871-4FDD-A93A-3A481FA51C63}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>RIval</RootNamespace>
+    <RootNamespace>Ignite</RootNamespace>
     <AssemblyName>Ignite</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
