Внедрение Arctium(уж простите господа немцы), обновления API URL, мнодественные фиксы багов, параметры, тултипы. Немного красоты

--- a/RIval/RIval.csproj
+++ b/RIval/RIval.csproj
@@ -108,6 +108,26 @@
     <Compile Include="Core\Components\FileSystem\Types\FileObj.cs" />
     <Compile Include="Core\Components\FileSystem\Types\FileObjectsCollection.cs" />
     <Compile Include="Core\Components\Game\GameCfg.cs" />
+    <Compile Include="Core\Components\Launcher\Additional\Extensions.cs" />
+    <Compile Include="Core\Components\Launcher\Additional\Helpers.cs" />
+    <Compile Include="Core\Components\Launcher\Additional\WinMemory.cs" />
+    <Compile Include="Core\Components\Launcher\Data\Patches.cs" />
+    <Compile Include="Core\Components\Launcher\Data\Patterns.cs" />
+    <Compile Include="Core\Components\Launcher\Data\Store.cs" />
+    <Compile Include="Core\Components\Launcher\External\BinaryTypes.cs" />
+    <Compile Include="Core\Components\Launcher\External\LargeInteger.cs" />
+    <Compile Include="Core\Components\Launcher\External\MemoryBasicInformation.cs" />
+    <Compile Include="Core\Components\Launcher\External\MemProtection.cs" />
+    <Compile Include="Core\Components\Launcher\External\MemState.cs" />
+    <Compile Include="Core\Components\Launcher\External\MemType.cs" />
+    <Compile Include="Core\Components\Launcher\External\NativeWindows.cs" />
+    <Compile Include="Core\Components\Launcher\External\NtStatus.cs" />
+    <Compile Include="Core\Components\Launcher\External\ProcessAccessFlags.cs" />
+    <Compile Include="Core\Components\Launcher\External\ProcessBasicInformation.cs" />
+    <Compile Include="Core\Components\Launcher\External\ProcessInformation.cs" />
+    <Compile Include="Core\Components\Launcher\External\StartupInfo.cs" />
+    <Compile Include="Core\Components\Launcher\External\ThreadAccessFlags.cs" />
+    <Compile Include="Core\Components\Launcher\LaunchMgr.cs" />
     <Compile Include="Core\Components\Log\LogCfg.cs" />
     <Compile Include="Core\Components\Message\MessageBoxBuilder.cs" />
     <Compile Include="Core\Components\Message\MessageBoxMgr.cs" />
